# customer-agent-template-azom

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  SOUL.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: cases_ai.yaml  customer.json  dashboard.yaml  integrations.yaml  limits.yaml  mailboxes.yaml  prompts.yaml  rbac.yaml  sites.yaml
docs/: ANALYSIS_AND_DEVELOPMENT_PLAN.md  AUTO_INSTALL.md  CASES.md  COMPLIANCE.md  DEPLOY_UBUNTU24_HETZNER.md  DEVELOPMENT_PLAN_FINISH.md  DOCKER_CONFIG_OVERLAY.md  GROK_BUILD_PROMPT.md  README.md  SYSTEM_OVERVIEW.md  TELEGRAM_OPENCLAW.md  V1_IMPLEMENTATION.md  V2_OAUTH_GMAIL.md  V2_RELEASE.md
docs/ideation/: 2026-07-11-azom-project-overview-next-steps-scope.md  2026-07-11-azom-status-improvement-backlog.md  2026-07-17-azom-comprehensive-analysis.md  baseline-capture.md
docs/runbooks/: README.md  cases-db-corrupt.md  dashboard-rate-limited.md  gmail-oauth-revoked.md  mail-poll-stuck.md  openrouter-budget-exhausted.md  woo-webhook-disabled.md
docs/solutions/: 2026-07-11-mail-thread-poll-llm-drafts.md  2026-07-16-fu9-auto-send-preconditions.md  2026-07-16-live-soak-checklist.md  2026-07-16-support-classify-fixtures-sb4.md  2026-07-17-woo-wordpress-capacity-review.md
infrastructure/: docker-compose.prod.yml  docker-compose.yml
infrastructure/dashboard/: app.py  secret_probes.py  settings_store.py  status.py
infrastructure/systemd/: azom-backup.service  azom-backup.timer  azom-bot.service  azom-cases-poll.service  azom-cases-poll.timer  azom-daily-brief.service  azom-daily-brief.timer  azom-dashboard.service  azom-retention-purge.service  azom-retention-purge.timer
skills/ecom-ops/: SKILL.md  integrations.py
skills/ecom_ops/: __init__.py  __main__.py  audit.py  budget.py  classify_eval.py  cli.py  config.py  draft_eval.py  drift_check.py  escalation.py  json_logging.py  kpis.py  llm.py  ops_status.py  order_context.py  order_status_update.py  product_desc_gen.py  prompts.py  rbac.py  security.py  smoke.py  support_handler.py  telemetry.py  (+1 more)
tests/: conftest.py  test_auto_send_rails.py  test_budget_and_regenerate_cli.py  test_bugfixes_prod_paths.py  test_case_kpis.py  test_case_regenerate.py  test_cases.py  test_cases_v2.py  test_chat_agent.py  test_classify_eval_cli.py  test_cli_and_config.py  test_dashboard.py  test_dashboard_auth.py  test_dashboard_settings.py  test_dialog_fluidity.py  test_llm_draft_context.py  test_llm_support_drafts.py  test_mail.py  test_oauth_gmail.py  test_ops_readiness_smoke.py  test_order_context_rich.py  test_order_context_v21.py  test_order_status.py  test_product_desc.py  test_product_desc_llm.py  test_rbac_escalation.py  test_schema_migrate.py  test_security.py  test_spinup.sh  test_sprint_a_approve_flow.py  test_sprint_c_ops.py  test_ssh_ops.py  test_suggest_approve.py  test_suggest_triage_ux.py  test_support.py  test_support_classify_fixtures.py  test_telegram_actors.py  test_telegram_state.py  test_woo_v21_extensions.py  test_woo_webhooks.py  (+1 more)
(+67 files in other folders)
