[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azom-ecom-ops"
version = "1.1.0"
description = "Azom ecom-ops agent: order-status, product-desc, support, SSH, mail (V1 pilot)"
readme = "README.md"
requires-python = ">=3.11"
# Production target: Ubuntu 24.04 ships Python 3.12; local/CI may use 3.11+

dependencies = [
  "PyYAML>=6.0",
  "requests>=2.31",
  "Flask>=3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "responses>=0.25",
]
dashboard = [
  "Flask>=3.0",
]

[project.scripts]
ecom-ops = "ecom_ops.cli:main"

[tool.setuptools.packages.find]
where = ["skills"]
include = ["ecom_ops*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["skills"]
addopts = "-q --tb=short"

[tool.coverage.run]
source = ["ecom_ops"]
branch = true
